--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,9 +13,9 @@ env:
     
 task:
   name: "build"
-  timeout_in: 150m
+  timeout_in: 120m
   container:
-      image: apon77/aosp:cirrus
+      image: shazuxdd/ubuntu:latest
       cpu: 8
       memory: 32G
   Storage-Checker_script:
