--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,7 +3,7 @@ env:
     DEVICE: RMX1901
     OEM: realme
     LOCAL_MANIFEST: https://github.com/ij-israfil/local_manifest_2.git -b havoc
-    TARGET: havoc
+    TARGET: bacon
     LUNCH_COMBO: lineage_${DEVICE}-userdebug
     OUTPUT: H*.zip
     #CLO: Drive1:Havoc
