--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,11 +13,11 @@ env:
     
 task:
   name: "build"
-  timeout_in: 120m
+  timeout_in: 3h
   container:
       #image: apon77/aosp:cirrus
       image: shazuxdd/ubuntu:latest
-      cpu: 8
+      cpu: 16
       memory: 32G
   Storage-Checker_script:
       - ./scripts/d0wnl0ad
