--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,7 +21,7 @@ jobs:
         cat trigger.txt
 
     - name: Commit & Push changes
-      uses: actions-js/push@v1.
+      uses: actions-js/push@v1.4
       with:
         github_token: ${{ secrets.GH_TOKEN }}
         author_email: 'ci.twrp@gmail.com'
