--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,7 +17,7 @@ task:
   container:
       #image: apon77/aosp:cirrus
       #image: shazuxdd/ubuntu:latest
-      images: boyned/selene
+      image: boyned/selene
       cpu: 8
       memory: 32G
   Storage-Checker_script:
