--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ env:
     MANIFEST: https://github.com/Evolution-X/manifest.git -b tiramisu --depth=1
     DEVICE: RMX1901
     OEM: realme
-    LOCAL_MANIFEST: https://github.com/ij-israfil/local_manifest.git
+    LOCAL_MANIFEST: https://github.com/ij-israfil/local_manifest.git -b main
     TARGET: evolution 
     LUNCH_COMBO: evolution_${DEVICE}-userdebug
     OUTPUT: e*.zip
