--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,6 +23,10 @@ task:
       - ./scripts/d0wnl0ad
   Sync_script:
       - ./scripts/syn0
+
+      tsync_script:
+      - ./scripts/tsync
+      
   Build_script:
       - ./scripts/bu1ld
   upload_script:
