--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ env:
     MANIFEST: https://github.com/RisingTechOSS/android -b thirteen --git-lfs --depth=1
     DEVICE: RMX1901
     OEM: realme
-    LOCAL_MANIFEST: https://github.com/ij-israfil/local_manifest.git -b rr
+    LOCAL_MANIFEST: https://github.com/ij-israfil/local_manifest.git -b rise
     TARGET: bacon
     LUNCH_COMBO: lineage_${DEVICE}-userdebug
     OUTPUT: r*.zip
