--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,7 +3,7 @@ env:
     DEVICE: RMX1901
     OEM: realme
     LOCAL_MANIFEST: https://github.com/ij-israfil/local_manifest.git -b px
-    TARGET: bacon
+    TARGET: pixys
     LUNCH_COMBO: pixys_${DEVICE}-userdebug
     OUTPUT: r*.zip
     CLO: Drive3:PX
