--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Commit & Push changes
       uses: actions-js/push@master
       with:
-        branch: "evox"
+        branch: "aw"
         github_token: ${{ secrets.GH_TOKEN }}
         author_email: 'ci.twrp@gmail.com'
         author_name: 'RecoveryBuilder'
