--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,10 +15,10 @@ task:
   name: "build"
   timeout_in: 120m
   container:
-      image: apon77/aosp:cirrus
-      #image: shazuxdd/ubuntu:latest
+      #image: apon77/aosp:cirrus
+      image: shazuxdd/ubuntu:latest
       cpu: 8
-      memory: 32G
+      memory: 40G
   Storage-Checker_script:
       - ./scripts/d0wnl0ad
   Sync_script:
