--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,8 +1,8 @@
 env:
     MANIFEST: https://github.com/Evolution-X/manifest -b vic --git-lfs --depth=1
     OEM: realme
-    LOCAL_MANIFEST: https://github.com/israfilbd/local_manifest.git -b evox-vic
-    TARGET: bacon
+    LOCAL_MANIFEST: https://github.com/israfilbd/local_manifests.git -b evox-vic
+    TARGET: mka bacon
     LUNCH_COMBO: lunch lineage_RMX1901-ap3a-user
     OUTPUT: r*.zip
     CLO: Drive3:Rise
